feature/api add users controller
