# app/Http/Requests/User/UserUpdatePasswordRequest.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Requests\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
+
+class UserUpdatePasswordRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        $user = Auth::user();
+
+        Validator::extend('old_password', function($attribute, $value) use ($user) {
+            return Hash::check( $value, $user->password );
+        },'Wrong password!');
+
+        return [
+            'old_password' => 'required|min:6|max:32|old_password',
+            'password' => 'required|min:6|max:32|confirmed',
+            'password_confirmation' => 'required|min:6|max:32'
+        ];
+    }
+}
