# app/Http/Requests/User/UserUpdateRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UserUpdateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'first_name' => 'alpha|max:50',
+            'last_name' => 'alpha|max:50',
+            'location' => 'max:20',
+        ];
+    }
+}
